# solana-dex-bmv

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  bot_state.sqlite  build_error.txt  build_log.txt  config.light.yaml  config.yaml  docker-compose.local.yml  docker-compose.yml  latency_result.json  prometheus.yml  requirements.txt  requirements_utf8.txt  temp_test_results.txt
.agent/rules/: deploy-server.md  linera-document-progress.md  memory-bank.md  prune-env.md  refine-documentation.md  update-version.md  use-temp-folder.md  web-search.md
.agent/workflows/: capabilities-report.md  code-quality-check.md  commit-and-push.md  (+14 more)
.cargo/: config.toml
bot/: main.py
config/: base.yaml  local.yaml  prod.yaml
dashboard/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
deployment/: nginx.conf
docs/: CONDA.md  DEX Trading Bot — Требования.md  DOCKER.md  MEMORY_BANK.md  MVP.md  ORDER_GRID_VISUALIZATION.md  TESTING.md  TEST_PLAN.md  WORKFLOWS.md  linear_project_report.md  v0.4.0_FEATURES.md  v0.4.2_SECURITY_HARDENING.md  v0.4.6_DASHBOARD_AND_TESTING.md  v0.4.8_TECHNICAL_SPECIFICATION.md  v2.8_TECHNICAL_SPECIFICATION.md  Алгоритм динамического построения торговой сетки ордеров.md
examples/: gen_hash.rs
nginx/: nginx.conf
scripts/: generate_wallets.js
solana_dex_bmv/: __init__.py  analytics.py  fiat.py  grid.py  risk.py  weights.py
src/: lib.rs  main.rs
tests/: integration_tests.rs  performance_tests.rs  test_analytics.py  test_fiat.py  test_grid.py  test_risk.py  test_smoke.py  test_weights.py
(+111 files in other folders)
