[package]
name = "solana-dex-bmv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
solana-client = "1.18"
solana-sdk = "1.18"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1.32", features = ["serde-float"] }
rust_decimal_macros = "1.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
base64 = "0.21"
bincode = "1.3"
solana-account-decoder = "1.18"
metrics = "0.21"
metrics-exporter-prometheus = "0.12.1"



[dev-dependencies]
mockall = "0.11"
tempfile = "3.8"
